# ElectroLibrary

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.test  pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/cache/: redis.py
backend/app/database/: couchdb.py
backend/app/repositories/: book.py  reference.py
backend/app/routers/: authors.py  books.py  genres.py  publishers.py
backend/app/schemas/: book.py  reference.py
backend/app/services/: book.py  reference.py
backend/tests/: conftest.py  test_books.py  test_cache.py  test_couchdb_errors.py  test_references.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.vue  api.js  main.js  style.css
frontend/src/components/: AppShell.vue  MessageBox.vue
frontend/src/views/: BookFormView.vue  BooksView.vue  ReferencesView.vue
