[project]
name = "electrolibrary-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.7,<3",
    "redis>=5.2,<7",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "asgi-lifespan>=2.1,<3",
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
